--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   cupertino_icons: ^1.0.6
+  fl_chart: ^0.69.2
   flutter:
     sdk: flutter
   flutter_vector_icons: ^2.0.0
